--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation group: 'io.github.wimdeblauwe', name: 'htmx-spring-boot-thymeleaf', version: '3.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
